--- a/ThreeSixtyOneView/app/styles/scss/scenario_result.scss
+++ b/ThreeSixtyOneView/app/styles/scss/scenario_result.scss
@@ -37,7 +37,7 @@
                             margin: 0 0;
                         }
                         .kpi-incremental {
-                            font-size: 40px;
+                            font-size: 36px;
                             font-weight: 700;
                             margin: 13px 0 5px;
                             line-height: 32px;
